[package]
authors = ["Garrett Berg <vitiral@gmail.com>"]
description = "items that could be in the standard library, part of the ergo ecosystem"
documentation = "https://docs.rs/ergo_std"
keywords = [
    "ergo",
    "std",
]
license = "MIT OR Apache-2.0"
name = "ergo_std"
readme = "README.md"
repository = "https://github.com/rust-crates/ergo_std"
version = "0.1.0"

[dependencies]
failure = "0.1.1"
itertools = "0.7.6"
lazy_static = "1.0.0"
maplit = "1.0.1"
ordermap = "0.3.5"
std_prelude = "0.2.11"
