[package]
authors = ["Garrett Berg <vitiral@gmail.com>"]
description = "items that could be in the standard library, part of the ergo ecosystem"
documentation = "https://docs.rs/ergo_std"
keywords = [
    "ergo",
    "std",
]
license = "MIT OR Apache-2.0"
name = "ergo_std"
readme = "README.md"
repository = "https://github.com/rust-crates/ergo_std"
version = "0.0.4"

[dependencies]
itertools = "0.7"
lazy_static = "1.0"
maplit = "1.0"
regex = "0.2.5"
serde = "1.0"
serde_derive = "1.0"
std_prelude = "0.2"
indexmap = {version="1.0.1", features=["serde-1"]}
