[package]
authors = ["Garrett Berg <vitiral@gmail.com>"]
description = "Methods and types for making working with the filesystem ergonomic, therefore fun."
documentation = "https://docs.rs/ergo_sync"
keywords = [
    "thread",
    "channel",
    "sync",
]
license = "MIT OR Apache-2.0"
name = "ergo_sync"
readme = "README.md"
repository = "https://github.com/rust-crates/ergo_sync"
version = "0.1.0"

[dependencies]
crossbeam-channel = "0.1.2"
num_cpus = "1.8.0"
std_prelude = "0.2.11"
taken = "0.1.0"

[dev-dependencies]
rayon = "0.9.0"
crossbeam-utils = "0.2.2"
